# ads1115-driver

./: .gitignore  ADS1115_driver_reference.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
cmake/: ads1115Config.cmake.in
examples/: CMakeLists.txt  basic_read.cpp  continuous_read.cpp
include/ads1115/: ads1115.hpp  i2c_interface.hpp  linux_i2c.hpp  types.hpp
src/: ads1115.cpp  linux_i2c.cpp
tests/: CMakeLists.txt  mock_i2c.hpp  test_comparator.cpp  test_config_encoding.cpp  test_is_conversion_ready.cpp  test_power_down.cpp  test_read_channel.cpp  test_reset.cpp  test_thresholds.cpp  test_voltage_conversion.cpp  test_wait_for_conversion.cpp
